third_party/move/move-compiler-v2/tests/checking/typing/uninferred_type_unpack_decl.exp

Diagnostics:
error: unable to infer type: `M::S<?1>`
  ┌─ tests/checking/typing/uninferred_type_unpack_decl.move:5:13
  │
5 │         let S{};
  │             ^^^
